blog/.vuepress/styles/index.styl
/**
 * Custom Styles here.
 *
 * ref：https://v1.vuepress.vuejs.org/config/#index-styl
 */
// @tailwind base;
@tailwind components;
@tailwind utilities;

.home .hero img
  max-width 550px!important;

@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC:500&display=swap');
:not(html)
  font-family: 'Noto Sans TC', sans-serif!important;

.header-wrapper .title
  text-transform: none;

.vuepress-blog-theme-content
  // background-color var(--c-bg) !important;

.go-to-top
  background-color var(--c-bg-lighter);
  height: 2rem;
  border-radius: 5px;
  padding: 5px;
  display: block;
  opacity .9;
  box-shadow: 1px 1px 3px rgba(0,0,0, .3);
  &:hover 
    opacity 1


.vssue 
  color: var(--c-text) !important
  .vssue-new-comment .vssue-new-comment-input
    background-color var(--c-bg);

  .vssue-pagination 
    display none !important;

  .vssue-comments
    margin-top 30px


@media (max-width: $MQMobile)
  .vuepress-blog-theme-content
    footer 
      margin 0 -1.5rem;
      border-radius 5px;

